--- a/Entity/EntityLayer.csproj
+++ b/Entity/EntityLayer.csproj
@@ -17,6 +17,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Language.Intellisense" Version="17.9.187" />
   </ItemGroup>
 
 </Project>
