--- a/Core_Portfolio/Core_Portfolio.csproj
+++ b/Core_Portfolio/Core_Portfolio.csproj
@@ -125,6 +125,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Writer\Data\" />
+    <Folder Include="wwwroot\userimage\" />
   </ItemGroup>
 
 </Project>
